# utools

./: .coveragerc  .cspell-project.txt  .cspell.dictionary.txt  .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
tests/: helpers.py  test_uparser.py  test_ure.py  test_utemplate.py
tests/ufsm/: symbols.py  test_dfa.py  test_minimize.py  test_nfa.py  test_nfa2dfa.py  test_phi.py
tests/ulc3/: test_instructions.py  test_util.py
tests/uparser/: test_calculator.py  test_uparser.py
tests/utemplate/: test_utemplate.py
utools/: __init__.py  ufsm.py  ulc3.py  uparser.py  ure.py  utemplate.py
