[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dynamic = ["classifiers"]

description = "utools"
license = "MIT"
name = "utools"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

authors = [
    {name = "Pablo Castellazzi", email = "pablo.castellazzi@icloud.com"},
]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 90
skip_covered = true
skip_empty = true

exclude_also = [
    "@(abc\\.)?abstractmethod",
    "class .*\\bProtocol\\):",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = "--cov=utools --strict-markers --quiet -Werror"

[tool.ruff]
builtins = ["_"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]

ignore = [
    "ANN",  # don't force type annotations
    "D",    # don't force documentation
    "S101", # conflict with pytest

    # conflict with ruff format
    "COM",  # trailing commas
    "E501", # line too long
]

[tool.uv]
python-preference = "only-managed"
